--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.3.2",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@types/cheerio": "^0.22.16",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
