--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^4.3.2",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "puppeteer": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
